# Sri-HealthCare

./: .env.example  .gitignore  README.md  USER_TRACKING_GAPS.md  deploy.sh  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  provision-oci.sh  vm-down.sh  vm-up.sh
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_search_indexes.py  0003_audit_protection.py  0004_add_deletion_requested_at.py  0005_technician_user_id_nullable.py  0006_user_addresses_and_family_is_active.py  0007_technician_notes.py  0008_password_reset_tokens.py  0009_full_feature_update.py  0010_cancellation_and_technician_accounts.py  0011_token_revocation_and_lockout.py  0012_payment_refund_fields.py  0013_health_concerns.py  0014_callback_requests.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/middleware/: audit.py  auth.py  logging.py  rate_limit.py  security.py
backend/app/models/: __init__.py  archive.py  audit.py  base.py  booking.py  callback_request.py  health_concern.py  notification.py  payment.py  report.py  service.py  settings.py  test.py  user.py
backend/app/repositories/: address_repository.py  audit_repository.py  booking_repository.py  callback_request_repository.py  feature_flag_repository.py  health_concern_repository.py  lab_branch_repository.py  notification_repository.py  package_repository.py  payment_repository.py  report_repository.py  service_repository.py  settings_repository.py  test_repository.py  (+3 more)
backend/tests/: test_integration.py
(+388 files in other folders)
